# maintafox-desktop

./: .cursorignore  .cursorrules  .env.example  .gitignore  .gitleaks.toml  .lintstagedrc.json  .prettierignore  .prettierrc  CHANGELOG.md  README.md  biome.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  audit.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: reliability_core.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: background_tests.rs  errors.rs  errors_tests.rs  kpi_definitions.rs  lib.rs  library_documents.rs  main.rs  startup.rs  startup_tests.rs  state.rs  state_tests.rs  tray.rs  window.rs  window_tests.rs
src-tauri/src/activation/: domain.rs  mod.rs  queries.rs  tests.rs
src-tauri/src/activity/: emitter.rs  mod.rs
src-tauri/src/analytics_contract/: mod.rs  queries.rs  sync_stage.rs
src-tauri/src/archive/: integrity.rs  mod.rs  writer.rs
src-tauri/src/assets/: bindings.rs  documents.rs  documents_tests.rs  governance.rs  health.rs  hierarchy.rs  hierarchy_tests.rs  identity.rs  identity_tests.rs  import.rs  import_tests.rs  lifecycle.rs  lifecycle_tests.rs  meters.rs  meters_tests.rs  mod.rs  photos.rs  search.rs  taxonomy_reference.rs
src-tauri/src/audit/: mod.rs  writer.rs
src-tauri/src/auth/: auth_integration_tests.rs  device.rs  lockout.rs  mod.rs  password.rs  password_policy.rs  pin.rs  rbac.rs  session_manager.rs
src-tauri/src/background/: mod.rs
src-tauri/src/backup/: mod.rs  tests.rs
src-tauri/src/commands/: activation.rs  activity_feed.rs  admin_audit.rs  admin_governance.rs  admin_permissions.rs  admin_stats.rs  admin_users.rs  advanced_rams.rs  analytics_contract.rs  app.rs  archive.rs  assets.rs  audit_log.rs  auth.rs  backup.rs  computation_jobs.rs  dashboard.rs  data_integrity.rs  di.rs  diagnostics.rs  entitlements.rs  finance.rs  fta_rbd_eta.rs  inspection.rs  inventory.rs  library_documents.rs  license.rs  locale.rs  lookup.rs  markov_mc.rs  mod.rs  notifications.rs  org.rs  permit.rs  personnel.rs  planning.rs  pm.rs  pm_delete.rs  product_license.rs  profile.rs  (+10 more)
src-tauri/src/data_integrity/: detectors.rs  mod.rs  queries.rs  repair.rs  sync_stage.rs
src-tauri/src/db/: demo_seeder.rs  integrity.rs  migration_integrity.rs  mod.rs  org_schema.rs  reference_domains.rs  schema_integration_test.rs  seeder.rs  tenant_bootstrap.rs
src-tauri/src/di/: attachments.rs  audit.rs  conversion.rs  conversion_tests.rs  domain.rs  migration_tests.rs  mod.rs  permissions.rs  queries.rs  query_tests.rs  review.rs  review_tests.rs  sla.rs  stats.rs  tests.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/entitlements/: domain.rs  mod.rs  queries.rs  tests.rs
src-tauri/src/finance/: domain.rs  mod.rs  queries.rs  sync_stage.rs  tests.rs
src-tauri/src/inspection/: domain.rs  mod.rs  queries.rs  results.rs  routing.rs  signals.rs
src-tauri/src/inventory/: controls.rs  domain.rs  mod.rs  procurement.rs  queries.rs  tests.rs  valuation.rs
src-tauri/src/jobs/: domain.rs  mod.rs  queries.rs  runner.rs
src-tauri/src/license/: domain.rs  mod.rs  queries.rs  security.rs  tests.rs
src-tauri/src/locale/: locale_integration_tests.rs  mod.rs
src-tauri/src/migrations/: m20260401_000001_system_tables.rs  m20260401_000002_user_tables.rs  m20260401_000008_backup_tables.rs  m20260401_000010_asset_registry_core.rs  m20260401_000011_asset_lifecycle_meter_docs.rs  m20260401_000012_asset_import_and_audit.rs  m20260401_000013_reference_domains_core.rs  m20260401_000014_reference_governance_maps.rs  m20260401_000015_reference_aliases_and_imports.rs  m20260401_000017_di_domain_core.rs  m20260401_000018_di_review_events.rs  m20260401_000019_di_attachments_sla.rs  m20260401_000020_di_change_events.rs  m20260402_000003_reference_domains.rs  m20260402_000004_org_schema.rs  m20260402_000005_equipment_schema.rs  m20260402_000006_teams_and_skills.rs  m20260404_000007_settings_tables.rs  m20260406_000009_org_audit_trail.rs  m20260408_000021_org_node_type_color.rs  m20260409_000022_wo_domain_core.rs  m20260410_000023_wo_execution_sub_entities.rs  m20260410_000024_wo_shift_column.rs  m20260410_000025_wo_closeout_and_attachments.rs  m20260411_000026_wo_change_events.rs  m20260411_000027_wo_conclusion_column.rs  m20260412_000028_rbac_scope_model.rs  m20260412_000029_permission_catalog.rs  m20260412_000030_admin_change_events.rs  m20260412_000031_rbac_settings_and_lockout.rs  m20260413_000032_rbac_hardening.rs  m20260413_000033_password_policy_settings.rs  (+83 more)
src-tauri/src/org/: audit.rs  (+18 more)
src-tauri/tests/: auth_integration_tests.rs  rams_golden.rs  reliability_perf_budget.rs  security_invariant_tests.rs
(+922 files in other folders)
