[package]
name = "maintafox"
version = "0.4.0-dev"
edition = "2021"
rust-version = "1.78"
build = "build.rs"

[lib]
name = "maintafox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sysinfo = "0.30"
regex = "1"
anyhow = "1"
base64 = "0.22"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
hex = "0.4"
csv = "1"
hostname = "0.4"
sys-locale = "0.3"
keyring = "2"
calamine = "0.30.1"
cron = "0.12.1"
rust_xlsxwriter = "0.79.4"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "reliability_core"
harness = false

# MSVC + cdylib: avoid sporadic LNK2019 (unresolved llvm/serde glue) from multi-CGU splits.
[profile.dev]
codegen-units = 1

[profile.release]
lto = "thin"
opt-level = "s"
strip = true
